@@ -1,3 +1,8 @@
+2015-12-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/include/wchar.h:
+	  A basic wchar.h with for types that are useful even with no wide character functions around.
+
 2015-12-05 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCC.y
